--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build": "eas build -p android"
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.9",
     "@react-navigation/native": "6.0.7",
     "@react-navigation/native-stack": "6.3.0",
+    "eas-cli": "^0.47.0",
     "expo": "~44.0.0",
     "expo-checkbox": "^2.0.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
