--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/datetimepicker": "5.1.0",
     "@react-navigation/native": "6.0.7",
     "@react-navigation/native-stack": "6.3.0",
+    "axios": "0.26.0",
     "eas-cli": "^0.47.0",
     "expo": "~44.0.0",
     "expo-checkbox": "^2.0.0",
