--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
+    "eject": "expo doctor --fix-dependencies",
     "build": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.9",
-    "@react-native-community/datetimepicker": "5.1.0",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/native": "6.0.7",
     "@react-navigation/native-stack": "6.3.0",
     "axios": "0.26.0",
