--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.2",
-    "react-native-web": "0.17.1"
+    "react-native-star-rating": "1.1.0",
+    "react-native-switch-toggle": "2.2.1",
+    "react-native-web": "0.17.1",
+    "react-redux": "7.2.6",
+    "redux": "4.1.2",
+    "toggle-switch-react-native": "3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
